--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "^11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -28,9 +29,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1299.0",
+    "react-native-collapsible": "^1.6.1",
     "react-native-ico-material-design": "^3.3.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-web": "~0.18.10",
+    "react-native-webview": "^13.2.2",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5"
   },
