--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/themed": "^4.0.0-rc.7",
@@ -19,7 +19,7 @@
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
-    "expo-font": "^11.1.1",
+    "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
@@ -28,15 +28,19 @@
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1299.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-ico-material-design": "^3.3.1",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-size-matters": "^0.4.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.10",
-    "react-native-webview": "^13.2.2",
+    "react-native-webview": "11.26.0",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5"
   },
