--- a/package.json
+++ b/package.json
@@ -27,23 +27,22 @@
     "expo-splash-screen": "~0.18.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1299.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-ico-material-design": "^3.3.1",
+    "react-native-paper": "^5.9.1",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4",
-    "react-navigation-material-bottom-tabs": "^2.3.5"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
