--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,7 +43,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
