--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "jwt-decode": "^3.1.2",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -43,8 +45,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4",
-    "expo-location": "~15.1.1"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
