--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-ico-material-design": "^3.3.1",
     "react-native-paper": "^5.9.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-size-matters": "^0.4.0",
