--- a/app.json
+++ b/app.json
@@ -1,36 +1,35 @@
 {
   "expo": {
-    "name": "brofit",
-    "slug": "brofit",
+    "name": "Brofit",
+    "slug": "your-app-slug",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-screen.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "scheme": "yourapp",
+    "userInterfaceStyle": "automatic",
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#FFFFFF"
       },
-      "package": "com.dashing_vinit.brofit"
+      "package": "com.yourcompany.yourapp",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "ea720b50-ca5b-4d89-ba30-1c6b72997805"
+        "projectId": "cbfc60d3-d9ec-4ea0-975c-cc0064b78344"
       }
-    },
-    "owner": "dashing_vinit"
+    }
   }
 }
