--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "^5.1.4",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,7 +47,8 @@
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
     "react-navigation": "^4.4.4",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
