named logs optimized iamges

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "brofit",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -25,7 +24,7 @@
     "expo-location": "~15.1.1",
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
@@ -48,7 +47,8 @@
     "react-native-webview": "11.26.0",
     "react-navigation": "^4.4.4",
     "expo-updates": "~0.16.4",
-    "expo-dev-client": "~2.2.1"
+    "expo-dev-client": "~2.2.1",
+    "expo-status-bar": "~1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
