--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.4",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
@@ -34,6 +40,7 @@
     "react-native-calendars": "^1.1299.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-ico-material-design": "^3.3.1",
     "react-native-paper": "^5.9.1",
     "react-native-picker-select": "^8.0.4",
@@ -45,10 +52,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4",
-    "expo-updates": "~0.16.4",
-    "expo-dev-client": "~2.2.1",
-    "expo-status-bar": "~1.4.4"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
