--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4",
-    "expo-blur": "~12.2.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
