owner nav and location

--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
         "projectId": "ee6244a8-4482-4a9b-a24b-191d4e8ed70d"
       }
     },
-    "owner": "dashV",
+    "owner": "dashv",
     "runtimeVersion": {
       "policy": "sdkVersion"
     },
