--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
     "react-navigation": "^4.4.4",
-    "react-native-reanimated": "~2.14.4"
+    "react-native-reanimated": "~2.14.4",
+    "expo-linear-gradient": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
