--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-router": "^1.5.3",
@@ -45,17 +46,15 @@
     "react-native-paper": "^5.9.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4",
-    "react-native-reanimated": "~2.14.4",
-    "expo-linear-gradient": "~12.1.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
