--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "react-native-paper": "^5.9.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-size-matters": "^0.4.0",
@@ -54,7 +53,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
