--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-ico-material-design": "^3.3.1",
     "react-native-image-picker": "^7.0.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.9.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-ratings": "^8.1.0",
