Added workout pages

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-calendars": "^1.1299.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
@@ -59,7 +59,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "expo-blur": "~12.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
