--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
     "react-navigation": "^4.4.4",
-    "expo-blur": "~12.2.2"
+    "expo-blur": "~12.2.2",
+    "expo-notifications": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
